030-software/fluxcd/apps/http-echo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: http-echo
  labels:
    namespace: http-echo
