030-software/fluxcd/apps/http-echo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: http-echo
