030-software/fluxcd/apps/http-echo/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo
spec:
  hostnames:
  - http-echo.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: http-echo
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
